refact: changing intermediary-agent to feign client